# fastapi_template

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  my-test.cnf  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3771440b4b4e_add_super_heroe.py  55ed4d3fb2fb_create_table_mascota.py  5732a9521743_agregar_sexo.py  fdd812fef97f_create_users_table.py
app/: db.py  main.py  models.py  store.py  utils.py
app/core/: settings.py
app/dtos/: user.py
app/models/: __init__.py  mascota.py  superheroes.py  user.py
app/routers/: tasks.py  users.py
docs/: alembic.md  comandos_uv.md
tests/: conftest.py  test_api.py  test_store.py
