[project]
name = "fastapi-template"
version = "0.1.0"
description = "Template de API REST con FastAPI (async-first) listo para Cloud Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2.9",
    # Requerido por asyncmy para el auth por defecto de MySQL 8 (caching_sha2_password).
    "cryptography>=42.0",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]
# B008: `Depends(...)` en defaults es el patrón idiomático de FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
